force-app/main/default/objects/Clawback_Policy__c/Clawback_Policy__c.object-meta.xml
<CustomObject>
    <description>Defines clawback rules and recovery windows for commission reversal scenarios.</description>
    <label>Clawback Policy</label>
    <nameField><label>Clawback Policy Name</label><type>Text</type></nameField>
    <pluralLabel>Clawback Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>