force-app/main/default/objects/Clawback_Policy__c/fields/Affects_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Affects_Attainment__c</fullName>
    <label>Affects Attainment</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>