force-app/main/default/objects/Clawback_Policy__c/fields/Clawback_Type__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Type__c</fullName>
    <label>Clawback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full</fullName><default>false</default><label>Full</label></value>
            <value><fullName>Time_Decayed</fullName><default>false</default><label>Time Decayed</label></value>
            <value><fullName>Partial_Fixed</fullName><default>false</default><label>Partial Fixed</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>