force-app/main/default/objects/Clawback_Policy__c/fields/Fixed_Recovery_Pct__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Recovery_Pct__c</fullName>
    <label>Fixed Recovery Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>