force-app/main/default/objects/Clawback_Policy__c/fields/Full_Recovery_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Full_Recovery_Window_Days__c</fullName>
    <label>Full Recovery Window Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>