force-app/main/default/objects/Clawback_Policy__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Clawback Policies</relationshipLabel>
    <relationshipName>Clawback_Policies</relationshipName>
</CustomField>