force-app/main/default/objects/Clawback_Policy__c/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Customer_Churn</fullName><default>false</default><label>Customer Churn</label></value>
            <value><fullName>Deal_Reversal</fullName><default>false</default><label>Deal Reversal</label></value>
            <value><fullName>Contract_Cancellation</fullName><default>false</default><label>Contract Cancellation</label></value>
            <value><fullName>Revenue_Shortfall</fullName><default>false</default><label>Revenue Shortfall</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>