force-app/main/default/objects/Clawback_Policy__c/fields/Trigger_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Source_Field__c</fullName>
    <label>Trigger Source Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>